--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                     <div class="card-content">
                         <div class="card-row">
                             <label>رقم اللوحة :</label>
-                            <div>5625ZUA</div>
+                            <div>6683ZJA</div>
                         </div>
                         <div class="card-row">
                             <label>رقم الهيكل :</label>
-                            <div>WDB9340821L142539</div>
+                            <div>YV2AS02A2D0913097</div>
                         </div>
                         <div class="card-row">
                             <label>الشركة الصانعة :</label>
-                            <div>مرسيدس</div>
+                            <div>فولفو</div>
                         </div>
                         <div class="card-row">
                             <label>نوع السيارة :</label>
