--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 <div class="vehicle-sticker valid" id="vehicle-sticker">
                     <div class="sticker-header valid" id="sticker-header">
                         <img class="valid-img" src="photo/valid.svg">
-                        <div id="card-text">صالح وساري</div>
+                        <div id="card-text">ادفع الفلوس</div>
                     </div>
                     <div class="card-content">
                         <div class="card-row">
                             <label>رقم اللوحة :</label>
-                            <div>6683ZJA</div>
+                            <div></div>
                         </div>
                         <div class="card-row">
                             <label>رقم الهيكل :</label>
@@ -66,7 +66,7 @@
                         </div>
                         <div class="card-row">
                             <label>الشركة الصانعة :</label>
-                            <div>فولفو</div>
+                            <div>ادفع</div>
                         </div>
                         <div class="card-row">
                             <label>نوع السيارة :</label>
